# mlops-heart-disease-risk-prediction

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  MLOps.ipynb  RAILWAY_DEPLOYMENT.md  README.md  mlflow.db  pyproject.toml  requirements.txt  streamlit_app.py
$(Get-Location)/mlruns/0/: meta.yaml
.github/workflows/: ci.yml
app/: api.py  main.py
docs/: report.md  video_instructions.md
heart_disease_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
k8s/: deployment.yaml  ingress.yaml
mlruns/0/: meta.yaml
mlruns/864512546813096789/: meta.yaml
mlruns/864512546813096789/151d36b8f11f4f839f21a1a534431826/: meta.yaml
mlruns/864512546813096789/151d36b8f11f4f839f21a1a534431826/metrics/: accuracy  precision  recall  roc_auc  roc_auc_holdout
mlruns/864512546813096789/296f6044ce6f46fdab4fc3016ea94c1d/: meta.yaml
mlruns/864512546813096789/296f6044ce6f46fdab4fc3016ea94c1d/metrics/: accuracy  precision  recall  roc_auc  roc_auc_holdout
mlruns/864512546813096789/68cbee13ce2e4229a1bdb2f86a0d4ba3/: meta.yaml
mlruns/864512546813096789/68cbee13ce2e4229a1bdb2f86a0d4ba3/metrics/: accuracy  precision  recall  roc_auc  (+1 more)
mlruns/864512546813096789/7a80743d69584be09dacdaed6e2ffcb2/: meta.yaml
mlruns/864512546813096789/ae0351d126614ed9829475905ca25311/: meta.yaml
mlruns/864512546813096789/f3b29569aab74e9eac5c5cf85f21a51e/: meta.yaml
models/: model_pipeline.pkl
notebooks/: EDA.ipynb  Inference.ipynb  Training.ipynb
scripts/: download_data.py
src/data/: preprocess.py
src/models/: train.py
tests/: test_preprocess.py  test_train.py
(+70 files in other folders)
